# gim

./: a.proto  goim.7z  message.proto  note.docx
goim/: CMakeLists.txt  GConnection.cc  GConnection.h  command.cc  command.h  main.cc  message.cc  message.h
goim/evpp/: CMakeLists.txt  connector.cc  dns_resolver.cc  duration.h  event_loop.cc  event_loop_thread.cc  event_watcher.cc  fd_channel.cc  inner_pre.cc  inner_pre.h  invoke_timer.cc  logging.cc  logging.h  sockets.cc  tcp_client.cc  tcp_conn.cc  windows_port.h
goim/evpp/evpphttp/: http_request.cc  service.cc
goim/evpp/httpc/: conn.cc  request.cc  ssl.cc
goim/evpp/udp/: sync_udp_client.cc  udp_server.cc
marsServer/: config.go  go.mod  http.go  main.go  tcpServer.go  topics.go
marsServer/client/: client.go
marsServer/clitest/: cli.go
marsServer/proto/: chat.pb.go  main.pb.go  messagepush.pb.go  topic.pb.go
marsServer/tcpTestClient/: tcpclient.go
marsServer/util/: httpclient.go  misc.go
marsServer/znet/: connection.go  connmanager.go  datapack.go  message.go  server.go
marsWindowsDemo/: CMakeLists.txt  ChatDlg.cpp  ChatDlg.h  MainDlg.cpp  MainDlg.h  Sample.aps  Sample.rc  resource.h
marsWindowsDemo/Business/: ChatCGITask.cpp  ChatCGITask.h  MarsWrapper.cpp  MarsWrapper.h
marsWindowsDemo/PublicComponentV2/: longlink_packer.cc  stn_callback.cpp
marsWindowsDemo/Wrapper/: NetworkService.cpp  NetworkService.h
marsWindowsDemo/mars/: note.txt
marsWindowsDemo/mars/bak/: app.lib  mars-boost.lib  xlog.lib
marsWindowsDemo/mars/comm/: verinfo.h
